# Tensor-Puzzles

./: Tensor Puzzlers.ipynb  pyproject.toml
