[project]
name = "tensor-puzzles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chalk-diagrams",
    "hypothesis>=6.112.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pytest>=8.3.3",
    "torch>=2.4.1",
    "torchtyping>=0.1.5",
]

[tool.uv.sources]
chalk-diagrams = { git = "https://github.com/chalk-diagrams/chalk" }
